# data

./: .buildinfo  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierignore  .versions.html.swp  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  backup_test_pickle.py  bench_decoding.py  bench_transforms.py  common.py  ds.py  example.py  examples.html  examples.vision.html  genindex.html  get_version_from_whl.py  index.html  make_ffcv.py  mypy.ini  objects.inv  old_prefetch.py  py-modindex.html  pyproject.toml  record_data.py  requirements.txt  results_dump  s3_try.py  search.html  searchindex.js  setup.cfg  setup.py  test1.py  test_cputime.py  test_dataloader.py  (+14 more)
.github/: PULL_REQUEST_TEMPLATE.md
0.10/: genindex.html  getting_started_with_torchdata_nodes.html  index.html  migrate_to_nodes_from_utils.html  objects.inv  py-modindex.html  search.html  searchindex.js  stateful_dataloader_tutorial.html  torchdata.nodes.html  torchdata.stateful_dataloader.html  what_is_torchdata_nodes.html
0.11/: .buildinfo  genindex.html  getting_started_with_torchdata_nodes.html  index.html  migrate_to_nodes_from_utils.html  objects.inv  py-modindex.html  search.html  stateful_dataloader_tutorial.html  torchdata.nodes.html  torchdata.stateful_dataloader.html  what_is_torchdata_nodes.html
0.3/: index.html  objects.inv  searchindex.js  torchdata.datapipes.map.html
0.3.0/: .buildinfo  examples.html  genindex.html  index.html  search.html  searchindex.js  torchdata.datapipes.iter.html  torchdata.datapipes.map.html  torchdata.datapipes.utils.html  tutorial.html
0.4/: .buildinfo  examples.html  genindex.html  index.html  objects.inv  search.html  searchindex.js  torchdata.datapipes.iter.html  torchdata.datapipes.map.html  torchdata.datapipes.utils.html  tutorial.html
0.4.0/: .buildinfo  examples.html  genindex.html  index.html  objects.inv  search.html  searchindex.js  torchdata.datapipes.iter.html  torchdata.datapipes.map.html  torchdata.datapipes.utils.html  tutorial.html
0.5/: .buildinfo  dataloader2.html  examples.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  torchdata.datapipes.iter.html  torchdata.datapipes.map.html  torchdata.datapipes.utils.html  tutorial.html
0.6/: .buildinfo  dataloader2.html  dlv2_tutorial.html  dp_tutorial.html  examples.html  genindex.html  index.html  objects.inv  py-modindex.html  reading_service.html  search.html  searchindex.js  torchdata.datapipes.iter.html  torchdata.datapipes.map.html  torchdata.datapipes.utils.html
0.7/: .buildinfo  dataloader2.html  dlv2_tutorial.html  dp_tutorial.html  examples.html  genindex.html  index.html  objects.inv  py-modindex.html  reading_service.html  search.html  searchindex.js  torchdata.datapipes.iter.html  torchdata.datapipes.map.html  torchdata.datapipes.utils.html
0.8/: dataloader2.html  dlv2_tutorial.html  dp_tutorial.html  examples.html  genindex.html  index.html  objects.inv  py-modindex.html  reading_service.html  search.html  searchindex.js  stateful_dataloader_tutorial.html  torchdata.datapipes.iter.html  torchdata.datapipes.map.html  torchdata.datapipes.utils.html  torchdata.stateful_dataloader.html
0.9/: dataloader2.html  dlv2_tutorial.html  dp_tutorial.html  examples.html  genindex.html  index.html  objects.inv  py-modindex.html  reading_service.html  search.html  searchindex.js  stateful_dataloader_tutorial.html  torchdata.datapipes.iter.html  torchdata.datapipes.map.html  torchdata.datapipes.utils.html  torchdata.stateful_dataloader.html
_sources/: examples.rst.txt  torchdata.datapipes.iter.rst.txt  torchdata.datapipes.iter.transform.rst.txt  torchdata.datapipes.iter.util.rst.txt  torchdata.datapipes.map.rst.txt  torchdata.datapipes.map.transform.rst.txt  torchdata.datapipes.utils.rst.txt  tutorial.rst.txt
benchmarks/: README.md  args.py  datasets.py  make_archives.py  report.py  requirements.txt  run.py  run_benchmark.py  trainers.py  utils.py
dataloader/: __init__.py  eventloop.py  graph.py  queue.py
datapipes/: __init__.py  iter.py  map.py  nonblocking.py  protocol.py
datapipes_old/: __init__.py
docs/: Makefile  README.md  docutils.conf  make.bat  requirements.txt
examples/: __init__.py  imagefolder.py
main/: .buildinfo  dataloader2.html  dlv2_tutorial.html  dp_tutorial.html  examples.html  genindex.html  getting_started_with_torchdata_nodes.html  index.html  migrate_to_nodes_from_utils.html  objects.inv  py-modindex.html  reading_service.html  search.html  searchindex.js  stateful_dataloader_tutorial.html  torchdata.datapipes.iter.html  torchdata.datapipes.map.html  torchdata.datapipes.utils.html  torchdata.nodes.html  torchdata.stateful_dataloader.html  tutorial.html  what_is_torchdata_nodes.html
packaging/: README.md  build_conda.sh  build_manylinux_wheel.sh  build_wheel.sh  env-var-script.txt  pkg_helpers.bash  post_build_script_linux.sh  pre_build_script_linux.sh  pre_build_script_macos.sh
scripts/: setup-centos8-devserver.sh  setup-pyarrow-centos8-devserver.sh  setup-python38-centos8-devserver.sh  setup-velox-deps-centos8-devserver.sh
test/: requirements.txt  requirements.yml  requirements_aistore.txt  test_adapter.py  test_aistore.py  test_audio_examples.py  test_dataframe.py  test_dataloader2.py  test_dataloader2_checkpoint_utils.py  test_dataloader2_utils.py  test_datapipe.py  test_distributed.py  test_examples.py  test_fsspec.py  test_graph.py  test_http_stress.py  test_huggingface_datasets.py  test_iter2map_converter.py  test_iterdatapipe.py  test_linter.py  test_local_io.py  test_mapdatapipe.py  test_period.py  (+8 more)
torcharrow/atab/velox/: CMakeLists.txt  column.cpp  column.h  lib.cpp  vector.cpp  vector.h
torcharrow/atab/velox/functions/: CMakeLists.txt  functions.h  string_functions.h
torcharrow/atab/velox/tests/: test_column.py  test_udf.py
torchdata/csrc/: CMakeLists.txt  utils.cpp
torchdata/csrc/pybind/: pybind.cpp
torchdata/csrc/pybind/S3Handler/: S3Handler.cpp  S3Handler.h  precompile.h  pybind.cpp
torchdata/csrc/pybind/s3_io/: pybind.cpp  s3_io.cpp  s3_io.h
(+501 files in other folders)
